--- a/client/src/styles/module/edit-table/_row.scss
+++ b/client/src/styles/module/edit-table/_row.scss
@@ -2,3 +2,7 @@
   border-bottom: 1px solid var(--mantine-color-default-border);
   display: grid;
 }
+
+.edit-table-body .row:nth-child(odd) {
+  background-color: var(--mantine-color-dark-8);
+}
